# Firmgen

./: .gitignore  CONTRIBUTING.md  CraftifAI Chat.html  Dockerfile  Dockerfile.agent  Dockerfile.api  Dockerfile.gui  README.md  Screencast from 12-02-26 12_18_27 PM IST.webm  Untitled  c2000_helper.sh  caps.json.backup  docker-compose.test.yml  docker-compose.yml  esp32-s3-devkitc-1-n32r8v.json  esp32_tools.yaml  example_wifi_prompt_esp32_agent.txt  fix_c2000_chatmessage.sh  fix_c2000_tools.sh  fix_chatmessages.sh  fix_string_literals.sh  idf_command.rs  refactapi.py  run-all-docker-esp32.sh  run-esp32.sh  start.sh  test-agent.sh  test-endpoints.sh  test_c2000_evaluator.sh  test_c2000_integration.sh  wifi_station_mode_example_testing_esp32_s3.txt
api-bundle/: caps.json  refactapi.py  requirements.txt
board_definitions/: esp32-h2-devkitm-1.json  esp32-p4-function-ev-board.json
craftifai-desktop/: .gitignore  README.md  SHARE.md  build-portable.bat  electron-builder.yml  main.js  package-lock.json  package.json  preload.js
dependencies/: Readme.txt  install_dependencies.bat
refact-agent/tui/: README.md  pyproject.toml
refact-agent/tui/refact_tui/: __init__.py  app.py
refact-agent/tui/refact_tui/screens/: __init__.py  chat.py  checkpoint_screen.py  confirm_screen.py  history_screen.py  settings.py  tools_screen.py
refact-agent/tui/refact_tui/services/: agent_client.py  history.py  stream_handler.py
refact-agent/tui/refact_tui/styles/: app.tcss
refact-agent/tui/refact_tui/widgets/: chat_panel.py  diff_viewer.py  input_area.py  sidebar.py  status_bar.py
(+843 files in other folders)
