[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "refact-tui"
version = "0.1.0"
description = "Terminal UI dashboard for Refact Agent"
requires-python = ">=3.9"
dependencies = [
    "textual>=1.0.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
refact-tui = "refact_tui.app:main"

[tool.setuptools.packages.find]
include = ["refact_tui*"]
